# FastAPI-JSONAPI

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  api_filtering_example.html  api_limited_methods_example.html  atomic_operations.html  changelog.html  client_generated_id.html  codecov.yaml  configuration.html  custom_sql_filtering.html  data_layer.html  errors.html  fastapi-jsonapi.html  filtering.html  genindex.html  include_many_to_many.html  include_related_objects.html  index.html  installation.html  logical_data_abstraction.html  minimal_api_example.html  minimal_api_head.html  oauth.html  objects.inv  pagination.html  permission.html  py-modindex.html  pyproject.toml  quickstart.html  relationships.html  requirements-all.txt  requirements-dev.txt  requirements.txt  routing.html  search.html  searchindex.js  (+6 more)
.doctrees/: api_filtering_example.doctree  api_limited_methods_example.doctree  atomic_operations.doctree  changelog.doctree  client_generated_id.doctree  configuration.doctree  custom_sql_filtering.doctree  data_layer.doctree  environment.pickle  errors.doctree  fastapi-jsonapi.doctree  filtering.doctree  include_many_to_many.doctree  include_related_objects.doctree  index.doctree  installation.doctree  logical_data_abstraction.doctree  minimal_api_example.doctree  minimal_api_head.doctree  oauth.doctree  pagination.doctree  permission.doctree  quickstart.doctree  relationships.doctree  routing.doctree  sorting.doctree  sparse_fieldsets.doctree  updated_includes_example.doctree  view_dependencies.doctree
.github/workflows/: documentation.yaml  pg-testing.yml  python-publish.yml  testing.yml
_sources/: api_filtering_example.rst.txt  api_limited_methods_example.rst.txt  changelog.rst.txt  client_generated_id.rst.txt  custom_sql_filtering.rst.txt  data_layer.rst.txt  errors.rst.txt  include_many_to_many.rst.txt  include_related_objects.rst.txt  index.rst.txt  installation.rst.txt  oauth.rst.txt  pagination.rst.txt  permission.rst.txt  routing.rst.txt  updated_includes_example.rst.txt  view_dependencies.rst.txt
docs/: Makefile  api_filtering_example.rst  api_limited_methods_example.rst  atomic_operations.rst  changelog.rst  client_generated_id.rst  conf.py  configuration.rst  custom_filter_example.rst  custom_sql_filtering.rst  data_layer.rst  errors.rst  fastapi-jsonapi.rst  filtering.rst  include_many_to_many.rst  include_related_objects.rst  index.rst  installation.rst  logical_data_abstraction.rst  minimal_api_example.rst  minimal_api_head.rst  modules.rst  oauth.rst  pagination.rst  permission.rst  quickstart.rst  relationships.rst  requirements.txt  resource_manager.rst  routing.rst  sorting.rst  sparse_fieldsets.rst  view_dependencies.rst
docs/http_snippets/: README.md  api_filtering__get_persons.json  api_filtering__get_persons__filter_word_contains_in_array.json  api_filtering__get_persons__filter_word_in_array.json  api_filtering__get_persons__filter_words_in_array.json  api_filtering__get_users__filter_word_contains_in_array.json  api_filtering__get_users__filter_word_in_array.json  api_filtering__get_users__filter_words_in_array.json  example_atomic_fail__create_computer_and_update_user_bio.json  example_atomic_five__mixed_actions.json  example_atomic_five__only_remove_actions.json  example_atomic_four__create_many-to-many.json  example_atomic_four__get-many-to-many_with_includes.json  example_atomic_one__create_computer_and_separate_user.json  example_atomic_three__create_user_and_user_bio.json  example_atomic_two__after_update_computer_check_details.json  example_atomic_two__update_computer.json  example_atomic_two__update_user.json  example_one_api__create_computer_for_user.json  example_one_api__create_user.json  example_one_api__get_user.json  example_one_api__get_user_with_computers.json  example_one_api__get_users.json  example_one_api__get_users_with_computers.json  includes__many_to_many.json  minimal_api__create_person.json  minimal_api__create_user.json  minimal_api__delete_person.json  minimal_api__delete_user.json  minimal_api__get_person.json  minimal_api__get_user.json  minimal_api__get_users.json  minimal_api__patch_person.json  minimal_api__patch_user.json  relationship_api__create_computer.json  relationship_api__create_computer_relationship_for_person.json  relationship_api__create_computer_relationship_for_user.json  relationship_api__create_person_with_computer_relationship.json  relationship_api__create_user_with_computer_relationship.json  relationship_api__delete_computer.json  (+11 more)
examples/: api_limited_methods.py  api_minimal.py  custom_filter_example.py
examples/api_for_sqlalchemy/: README.md  asgi.py  config.py  main.py  urls.py  util.py
examples/api_for_tortoise_orm/: README.md  asgi.py  main.py  urls.py
fastapi_jsonapi/: __init__.py  api.py  common.py  data_typing.py  jsonapi_typing.py  methods.py  openapi.py  querystring.py  schema.py  schema_base.py  schema_builder.py  signature.py  splitter.py  validation_utils.py
fastapi_jsonapi/atomic/: __init__.py  atomic.py  atomic_handler.py  prepared_atomic_operation.py  schemas.py
fastapi_jsonapi/data_layers/: base.py  data_typing.py  node_shared.py  orm.py  shared.py  sqla_orm.py  sqlalchemy_engine.py  tortoise_orm.py  tortoise_orm_engine.py
fastapi_jsonapi/exceptions/: __init__.py  base.py  handlers.py  json_api.py
fastapi_jsonapi/types_metadata/: __init__.py  client_can_set_id.py  custom_filter_sql.py  relationship_info.py
fastapi_jsonapi/utils/: __init__.py  dependency_helper.py  exceptions.py  logical.py  metadata_instance_search.py  none_checker.py  sqla.py
fastapi_jsonapi/views/: detail_view.py  list_view.py  utils.py  view_base.py  view_handlers.py
fastapi_rest_jsonapi/: __init__.py  api.py  clickhouse_filter.py  jsonapi_typing.py  methods.py  openapi.py  pagination.py  querystring.py  relationship.py  schema.py  signature.py  sorting.py  splitter.py
fastapi_rest_jsonapi/data_layers/: base.py  data_typing.py  orm.py  (+3 more)
tests/: common.py  common_user_api_test.py  conftest.py  fixtures.py  models.py  schemas.py
(+244 files in other folders)
