[tool.poetry]
name = "fastapi-jsonapi"
version = "1.0.0"
description = "FastAPI extension to create REST web api according to JSON:API specification"
authors = [
    "Aleksei Nekrasov <nekrasov.aleks@mail.ru>",
    "Suren Khorenyan <surenkhorenyan@gmail.com>",
]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_jsonapi"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.79.0"
pydantic = ">=1.9.1"
simplejson = ">=3.17.6"
uvicorn = ">=0.18.2"

sqlalchemy = { version = ">=1.4.39,<2.0.0", optional = true, extras = ["asyncio"] }
tortoise-orm = { version = ">=0.19.2", optional = true }

[tool.poetry.group.tests.dependencies]
pytest = "^7.3.1"
faker = "^18.9.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.0"
coverage = "^7.2.6"
pytest-cov = "^4.1.0"

[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
ruff = "^0.0.270"
mypy = "^1.3.0"
sqlalchemy-stubs = "^0.4"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"


[tool.poetry.group.examples.dependencies]
aiosqlite = "0.17.0"


[tool.poetry.group.dev.dependencies]
hatch = "^1.7.0"

[tool.poetry.extras]
sqla = ["sqlalchemy"]
tortoise = ["tortoise-orm"]
databases = ["sqlalchemy", "tortoise-orm"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
target-version = ["py38"]

[tool.ruff]
line-length = 119
target-version = "py39"
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "A",
    "C4",
    "COM",
    "DTZ",
    "T10",
    "EM",
    "ISC",
    "ICN",
    "G",
    "T20",
    "PT",
    "SIM",
    "TID",
    "ARG",
    "PTH",
#    "ERA",
    "PL",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
    "ASYNC",
#    "UP",
#    "ANN",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs/*",
    "examples/api_for_tortoise_orm/*",
]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

extend-ignore = [
    "D401",
    "D403",
    "D205",
    "D400",
    "D415",
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in `__init__`
    "D200",  # One-line docstring should fit on one line
    "D203",  # 1 blank line required before class docstring
    "D210",  # No whitespaces allowed surrounding docstring text
    "D212",  # Multi-line docstring summary should start at the first line
    "D301",  # Use r""" if any backslashes in a docstring
    "D404",  #  First word of the docstring should not be "This"
    "PLR0913",  # Too many arguments to function call
    "A003",  # Class attribute `type` is shadowing a Python builtin
    "ARG001",  # Unused function argument: `{name}`
    "ARG002",  # Unused method argument: `{name}`
    "ARG003",  # Unused class method argument: `{name}`
    "RUF001",  # String contains ambiguous unicode character {confusable} (did you mean {representant}?)
    "RUF002",  # Docstring contains ambiguous unicode character {confusable} (did you mean {representant}?)
    "RUF003",  # Comment contains ambiguous unicode character {confusable} (did you mean {representant}?)
]

[tool.ruff.per-file-ignores]
"examples/api_for_sqlalchemy/*" = [
    "E402",
    "D105",
]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
